fix School + tests